# polyzdb

./: .gitignore  Cargo.toml  README.md  out.txt  run.sh  tickers.txt
src/: agg1d.rs  agg1m.rs  config.rs  main.rs  tickers.rs  trades.rs  util.rs
src/polygon/: aggs.rs  grouped.rs  mod.rs
src/zdb/: agg1d.rs  agg1m.rs  mod.rs  trades.rs
