[package]
name = "polyzdb"
version = "0.1.0"
authors = ["clickingbuttons"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "*"
serde_json = "*"
threadpool = "1.8.1"
ureq = { version = "1.5.1", features = ["json"] }
zdb = { path = "../zdb" }

[profile.release]
debug = true
